Fix test after order of table cell modifiers was switched to match Textile2 in [222].

--- a/test/table.yml
+++ b/test/table.yml
@@ -112,7 +112,7 @@ out: |-
 ---
 in: |-
   table{width: 200px; border:2px solid gray;}.
-  |=_. Alignment|
+  |_=. Alignment|
   |=. centered|
   |=(. a bit right|
   |=). a bit left|
