--- a/test/hobix.yml
+++ b/test/hobix.yml
@@ -7,8 +7,7 @@ in: |-
   Followed by another.
 out: |-
   <p>A single paragraph.</p>
-  
-  	<p>Followed by another.</p>
+  <p>Followed by another.</p>
 --- 
 name: html tags
 desc: You can certainly use HTML tags inside your Textile documents.  HTML will only be escaped if it&#8217;s found in a <code>pre</code> or <code>code</code> block.
@@ -20,8 +19,6 @@ in: |-
   </pre>
 out: |-
   <p>I am <b>very</b> serious.</p>
-  
-  
   <pre>
     I am &lt;b&gt;very&lt;/b&gt; serious.
   </pre>
@@ -91,19 +88,17 @@ out: <h3>Header 3</h3>
 name: blockquote
 desc: To make an entire paragraph into a block quotation, place “bq.” before it.
 in: |-
-  An old text
+  Any old text
   
   bq. A block quotation.
   
   Any old text
 out: |-
-  <p>An old text</p>
-  
-  	<blockquote>
-  		<p>A block quotation.</p>
-  	</blockquote>
-  
-  	<p>Any old text</p>
+  <p>Any old text</p>
+  <blockquote>
+  <p>A block quotation.</p>
+  </blockquote>
+  <p>Any old text</p>
 --- 
 name: footnote reference
 desc: Numeric references within text to footnotes appear between square brackets.
@@ -266,9 +261,9 @@ in: |
   The main text of the page goes here and will stay to the left of the sidebar.
 out: |-
   <div style="float:right;">
-  	<h3>Sidebar</h3>
-  
-  	<p><a href="http://hobix.com/">Hobix</a><br />
+
+  <h3>Sidebar</h3>
+  <p><a href="http://hobix.com/">Hobix</a><br />
   <a href="http://ruby-lang.org/">Ruby</a></p>
   </div>
   
@@ -283,9 +278,9 @@ in: |-
 out: |-
   <ol>
   	<li>A first item</li>
-  		<li>A second item</li>
-  		<li>A third</li>
-  	</ol>
+  	<li>A second item</li>
+  	<li>A third</li>
+  </ol>
 --- 
 name: nested numbered lists
 desc: These lists may be nested by increasing the number of pound symbols preceding child entries.
@@ -301,17 +296,16 @@ out: |-
   <ol>
   	<li>Fuel could be:
   	<ol>
-  	<li>Coal</li>
+  		<li>Coal</li>
   		<li>Gasoline</li>
   		<li>Electricity</li>
-  	</ol>
-  	</li>
-  		<li>Humans need only:
+  	</ol></li>
+  	<li>Humans need only:
   	<ol>
-  	<li>Water</li>
+  		<li>Water</li>
   		<li>Protein</li>
   	</ol></li>
-  	</ol>
+  </ol>
 --- 
 name: bulleted list
 desc: Bulleted lists use an asterisk in place of the pound.
@@ -322,9 +316,9 @@ in: |-
 out: |-
   <ul>
   	<li>A first item</li>
-  		<li>A second item</li>
-  		<li>A third</li>
-  	</ul>
+  	<li>A second item</li>
+  	<li>A third</li>
+  </ul>
 --- 
 name: nested bulleted lists
 desc: These lists may be nested in like manner.
@@ -340,17 +334,16 @@ out: |-
   <ul>
   	<li>Fuel could be:
   	<ul>
-  	<li>Coal</li>
+  		<li>Coal</li>
   		<li>Gasoline</li>
   		<li>Electricity</li>
-  	</ul>
-  	</li>
-  		<li>Humans need only:
+  	</ul></li>
+  	<li>Humans need only:
   	<ul>
-  	<li>Water</li>
+  		<li>Water</li>
   		<li>Protein</li>
   	</ul></li>
-  	</ul>
+  </ul>
 --- 
 name: links
 desc: Basic links are comprised of a phrase which is linked to a <acronym title="Universal Resource Locator">URL</acronym>.  Place the descriptive phrase in quotation marks.  Follow it immediately by a colon and the URL.
@@ -394,8 +387,7 @@ in: |-
   machine and paid it to sing to them.
 out: |-
   <p style="float:right;"><img src="obake.gif" alt="" /></p>
-  
-  	<p>And others sat all round the small<br />
+  <p>And others sat all round the small<br />
   machine and paid it to sing to them.</p>
 --- 
 name: acronym definitions
@@ -412,27 +404,27 @@ in: |-
   | bella | 45 | f |
 out: |-
   <table>
-  		<tr>
-  			<td> name </td>
-  			<td> age </td>
-  			<td> sex </td>
-  		</tr>
-  		<tr>
-  			<td> joan </td>
-  			<td> 24 </td>
-  			<td> f </td>
-  		</tr>
-  		<tr>
-  			<td> archie </td>
-  			<td> 29 </td>
-  			<td> m </td>
-  		</tr>
-  		<tr>
-  			<td> bella </td>
-  			<td> 45 </td>
-  			<td> f </td>
-  		</tr>
-  	</table>
+  	<tr>
+  		<td> name </td>
+  		<td> age </td>
+  		<td> sex </td>
+  	</tr>
+  	<tr>
+  		<td> joan </td>
+  		<td> 24 </td>
+  		<td> f </td>
+  	</tr>
+  	<tr>
+  		<td> archie </td>
+  		<td> 29 </td>
+  		<td> m </td>
+  	</tr>
+  	<tr>
+  		<td> bella </td>
+  		<td> 45 </td>
+  		<td> f </td>
+  	</tr>
+  </table>
 --- 
 name: table headers
 desc: Specify header cells by marking them with an underscore and period.
@@ -443,27 +435,27 @@ in: |-
   | bella | 45 | f |
 out: |-
   <table>
-  		<tr>
-  			<th>name </th>
-  			<th>age </th>
-  			<th>sex </th>
-  		</tr>
-  		<tr>
-  			<td> joan </td>
-  			<td> 24 </td>
-  			<td> f </td>
-  		</tr>
-  		<tr>
-  			<td> archie </td>
-  			<td> 29 </td>
-  			<td> m </td>
-  		</tr>
-  		<tr>
-  			<td> bella </td>
-  			<td> 45 </td>
-  			<td> f </td>
-  		</tr>
-  	</table>
+  	<tr>
+  		<th>name </th>
+  		<th>age </th>
+  		<th>sex </th>
+  	</tr>
+  	<tr>
+  		<td> joan </td>
+  		<td> 24 </td>
+  		<td> f </td>
+  	</tr>
+  	<tr>
+  		<td> archie </td>
+  		<td> 29 </td>
+  		<td> m </td>
+  	</tr>
+  	<tr>
+  		<td> bella </td>
+  		<td> 45 </td>
+  		<td> f </td>
+  	</tr>
+  </table>
 --- 
 name: table cell attributes
 desc: The period used above marks the end of a cell’s attributes.  Other attributes can be applied as well.
@@ -477,28 +469,28 @@ in: |-
   |~. bottom |
 out: |-
   <table>
-  		<tr>
-  			<th>attribute list </th>
-  		</tr>
-  		<tr>
-  			<td style="text-align:left;">align left </td>
-  		</tr>
-  		<tr>
-  			<td style="text-align:right;">align right</td>
-  		</tr>
-  		<tr>
-  			<td style="text-align:center;">center </td>
-  		</tr>
-  		<tr>
-  			<td style="text-align:justify;">justify </td>
-  		</tr>
-  		<tr>
-  			<td style="vertical-align:top;">valign top </td>
-  		</tr>
-  		<tr>
-  			<td style="vertical-align:bottom;">bottom </td>
-  		</tr>
-  	</table>
+  	<tr>
+  		<th>attribute list </th>
+  	</tr>
+  	<tr>
+  		<td style="text-align:left;">align left </td>
+  	</tr>
+  	<tr>
+  		<td style="text-align:right;">align right</td>
+  	</tr>
+  	<tr>
+  		<td style="text-align:center;">center </td>
+  	</tr>
+  	<tr>
+  		<td style="text-align:justify;">justify </td>
+  	</tr>
+  	<tr>
+  		<td style="vertical-align:top;">valign top </td>
+  	</tr>
+  	<tr>
+  		<td style="vertical-align:bottom;">bottom </td>
+  	</tr>
+  </table>
 --- 
 name: table colspan
 desc: You can also specify colspans with a backslash, followed by the cell width.
@@ -507,14 +499,14 @@ in: |-
   | col 1 | col 2 |
 out: |-
   <table>
-  		<tr>
-  			<td colspan="2">spans two cols </td>
-  		</tr>
-  		<tr>
-  			<td> col 1 </td>
-  			<td> col 2 </td>
-  		</tr>
-  	</table>
+  	<tr>
+  		<td colspan="2">spans two cols </td>
+  	</tr>
+  	<tr>
+  		<td> col 1 </td>
+  		<td> col 2 </td>
+  	</tr>
+  </table>
 --- 
 name: table rowspan
 desc: Rowspan is specified by a forward slash, followed by the row height.
@@ -524,27 +516,27 @@ in: |-
   | c |
 out: |-
   <table>
-  		<tr>
-  			<td rowspan="3">spans 3 rows </td>
-  			<td> a </td>
-  		</tr>
-  		<tr>
-  			<td> b </td>
-  		</tr>
-  		<tr>
-  			<td> c </td>
-  		</tr>
-  	</table>
+  	<tr>
+  		<td rowspan="3">spans 3 rows </td>
+  		<td> a </td>
+  	</tr>
+  	<tr>
+  		<td> b </td>
+  	</tr>
+  	<tr>
+  		<td> c </td>
+  	</tr>
+  </table>
 --- 
 name: block attributes applied to table cells
 desc: All block attributes can be applied to table cells as well.
 in: "|{background:#ddd}. Grey cell|"
 out: |-
   <table>
-  		<tr>
-  			<td style="background:#ddd;">Grey cell</td>
-  		</tr>
-  	</table>
+  	<tr>
+  		<td style="background:#ddd;">Grey cell</td>
+  	</tr>
+  </table>
 --- 
 name: black attributes applied to a table
 desc: Table-wide attributes can be applied before the first row of the table.  On its own line, followed by a period.
@@ -554,19 +546,19 @@ in: |-
   |This|is|a|row|
 out: |-
   <table style="border:1px solid black;">
-  		<tr>
-  			<td>This</td>
-  			<td>is</td>
-  			<td>a</td>
-  			<td>row</td>
-  		</tr>
-  		<tr>
-  			<td>This</td>
-  			<td>is</td>
-  			<td>a</td>
-  			<td>row</td>
-  		</tr>
-  	</table>
+  	<tr>
+  		<td>This</td>
+  		<td>is</td>
+  		<td>a</td>
+  		<td>row</td>
+  	</tr>
+  	<tr>
+  		<td>This</td>
+  		<td>is</td>
+  		<td>a</td>
+  		<td>row</td>
+  	</tr>
+  </table>
 --- 
 name: black attributes applied to a table row
 desc: Attributes can be applied to a single row by supplying the attribute before the row starts, using a <code>table</code> modifier and following it by a period.
@@ -575,16 +567,16 @@ in: |-
   {background:#ddd}. |This|is|grey|row|
 out: |-
   <table>
-  		<tr>
-  			<td>This</td>
-  			<td>is</td>
-  			<td>a</td>
-  			<td>row</td>
-  		</tr>
-  		<tr style="background:#ddd;">
-  			<td>This</td>
-  			<td>is</td>
-  			<td>grey</td>
-  			<td>row</td>
-  		</tr>
-  	</table>
+  	<tr>
+  		<td>This</td>
+  		<td>is</td>
+  		<td>a</td>
+  		<td>row</td>
+  	</tr>
+  	<tr style="background:#ddd;">
+  		<td>This</td>
+  		<td>is</td>
+  		<td>grey</td>
+  		<td>row</td>
+  	</tr>
+  </table>
